--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -17,6 +17,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XK-Ga-C4T" userLabel="phone_bg">
+                                <rect key="frame" x="20" y="249" width="374" height="90"/>
+                                <viewLayoutGuide key="safeArea" id="LrX-PM-Rpx"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="aer-dH-qJl"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUF-wv-BcO" userLabel="otp_bg">
+                                <rect key="frame" x="20" y="155" width="374" height="90"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="SdI-P6-cP0"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tu-ce-tEo" userLabel="float_bg">
+                                <rect key="frame" x="20" y="355" width="374" height="90"/>
+                                <viewLayoutGuide key="safeArea" id="lV9-kH-fom"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="Cbl-dn-NNn"/>
+                                </constraints>
+                            </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="7915" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U12-cx-uta" customClass="OTPCodeTextField" customModule="AGInputControls">
                                 <rect key="frame" x="57" y="84" width="300" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -33,7 +56,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R5f-hd-cj8" customClass="PhoneTextField" customModule="AGInputControls">
-                                <rect key="frame" x="191" y="258" width="32" height="34"/>
+                                <rect key="frame" x="191" y="278" width="32" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -43,27 +66,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField free dimentions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
-                                <rect key="frame" x="20" y="163" width="263" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
+                                <rect key="frame" x="20" y="155" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField free dimentions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
-                                <rect key="frame" x="20" y="229" width="238" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
+                                <rect key="frame" x="20" y="249" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SAD-K4-JCd" customClass="FloatingLabelTextField" customModule="AGInputControls">
-                                <rect key="frame" x="191" y="337" width="32" height="34"/>
+                                <rect key="frame" x="191" y="384" width="32" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField free dimentions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
-                                <rect key="frame" x="20" y="308" width="293" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
+                                <rect key="frame" x="20" y="355" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -73,19 +96,31 @@
                             <constraint firstItem="U12-cx-uta" firstAttribute="top" secondItem="Y8i-YP-3kF" secondAttribute="bottom" constant="8" symbolic="YES" id="6w2-ya-UHO"/>
                             <constraint firstItem="gwB-ev-g31" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7Ke-9U-Srp"/>
                             <constraint firstItem="UMk-pq-H9F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="9eC-g0-bkJ"/>
+                            <constraint firstItem="1tu-ce-tEo" firstAttribute="leading" secondItem="UMk-pq-H9F" secondAttribute="leading" id="A02-l6-0Iv"/>
+                            <constraint firstItem="cUF-wv-BcO" firstAttribute="leading" secondItem="gwB-ev-g31" secondAttribute="leading" id="Azm-GP-b2m"/>
+                            <constraint firstItem="1tu-ce-tEo" firstAttribute="trailing" secondItem="UMk-pq-H9F" secondAttribute="trailing" id="CMa-DC-g6W"/>
+                            <constraint firstItem="1tu-ce-tEo" firstAttribute="top" secondItem="UMk-pq-H9F" secondAttribute="top" id="I9I-dO-cnC"/>
                             <constraint firstItem="R5f-hd-cj8" firstAttribute="centerX" secondItem="97h-aD-3Z7" secondAttribute="centerX" id="Ium-s5-ytO"/>
-                            <constraint firstItem="97h-aD-3Z7" firstAttribute="top" secondItem="gwB-ev-g31" secondAttribute="bottom" id="JeD-LO-dxi"/>
+                            <constraint firstItem="97h-aD-3Z7" firstAttribute="top" secondItem="gwB-ev-g31" secondAttribute="bottom" constant="8" id="JeD-LO-dxi"/>
                             <constraint firstItem="Y8i-YP-3kF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="OPh-Fr-fHG"/>
+                            <constraint firstItem="8XK-Ga-C4T" firstAttribute="top" secondItem="Gfc-WF-3FH" secondAttribute="top" id="PNA-Jf-k9o"/>
                             <constraint firstItem="97h-aD-3Z7" firstAttribute="top" secondItem="U12-cx-uta" secondAttribute="bottom" constant="40" id="Pie-31-7gC"/>
+                            <constraint firstItem="8XK-Ga-C4T" firstAttribute="leading" secondItem="Gfc-WF-3FH" secondAttribute="leading" id="QCC-0Y-2nd"/>
+                            <constraint firstItem="cUF-wv-BcO" firstAttribute="trailing" secondItem="gwB-ev-g31" secondAttribute="trailing" id="Qtv-g2-obD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UMk-pq-H9F" secondAttribute="trailing" constant="20" id="SxN-Ed-spZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gwB-ev-g31" secondAttribute="trailing" constant="20" id="TAo-6Q-g9h"/>
                             <constraint firstItem="SAD-K4-JCd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Tfk-gQ-kTq"/>
                             <constraint firstItem="U12-cx-uta" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ddG-Fb-rdA"/>
-                            <constraint firstItem="SAD-K4-JCd" firstAttribute="top" secondItem="R5f-hd-cj8" secondAttribute="bottom" constant="45" id="eXh-zl-HiZ"/>
+                            <constraint firstItem="SAD-K4-JCd" firstAttribute="top" secondItem="R5f-hd-cj8" secondAttribute="bottom" constant="72" id="eXh-zl-HiZ"/>
                             <constraint firstItem="97h-aD-3Z7" firstAttribute="centerX" secondItem="U12-cx-uta" secondAttribute="centerX" id="h8L-M1-Z2F"/>
                             <constraint firstItem="Gfc-WF-3FH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="i1J-qX-rhu"/>
                             <constraint firstItem="U12-cx-uta" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="lpg-gD-5wE"/>
-                            <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="97h-aD-3Z7" secondAttribute="bottom" constant="40" id="qyM-y9-DFP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gfc-WF-3FH" secondAttribute="trailing" constant="20" id="m2p-Sx-h32"/>
+                            <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="97h-aD-3Z7" secondAttribute="bottom" constant="60" id="qyM-y9-DFP"/>
+                            <constraint firstItem="8XK-Ga-C4T" firstAttribute="trailing" secondItem="Gfc-WF-3FH" secondAttribute="trailing" id="rn2-Ae-8mS"/>
                             <constraint firstItem="SAD-K4-JCd" firstAttribute="top" secondItem="UMk-pq-H9F" secondAttribute="bottom" constant="8" symbolic="YES" id="svn-Zn-vir"/>
                             <constraint firstItem="R5f-hd-cj8" firstAttribute="top" secondItem="Gfc-WF-3FH" secondAttribute="bottom" constant="8" id="tLK-OF-1yo"/>
+                            <constraint firstItem="cUF-wv-BcO" firstAttribute="top" secondItem="gwB-ev-g31" secondAttribute="top" id="xmW-IE-1x3"/>
                         </constraints>
                     </view>
                     <connections>
@@ -97,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="25" y="94"/>
+            <point key="canvasLocation" x="24.637681159420293" y="93.75"/>
         </scene>
     </scenes>
     <designables>
@@ -111,6 +146,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
