--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -22,13 +22,13 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XYD-44-ltN">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="740"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="760"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKg-xS-JTl" userLabel="phone_fixed_width_bg">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZL-W4-6fL" customClass="PhoneTextField" customModule="AGInputControls">
-                                                        <rect key="frame" x="171" y="36.5" width="32" height="34"/>
+                                                        <rect key="frame" x="171" y="36.5" width="32" height="75.5"/>
                                                         <color key="backgroundColor" name="BG"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
@@ -48,11 +48,12 @@
                                                     <constraint firstItem="OZL-W4-6fL" firstAttribute="top" secondItem="wSv-Xi-TGw" secondAttribute="bottom" constant="8" symbolic="YES" id="Vdg-Vm-4wS"/>
                                                     <constraint firstItem="OZL-W4-6fL" firstAttribute="centerX" secondItem="tKg-xS-JTl" secondAttribute="centerX" id="ZJC-kq-eLz"/>
                                                     <constraint firstItem="wSv-Xi-TGw" firstAttribute="top" secondItem="CYQ-hS-bM8" secondAttribute="top" constant="8" id="lvb-ug-pfr"/>
-                                                    <constraint firstAttribute="height" constant="100" id="uSC-mw-0on"/>
+                                                    <constraint firstItem="CYQ-hS-bM8" firstAttribute="bottom" secondItem="OZL-W4-6fL" secondAttribute="bottom" constant="8" id="tHv-A9-GSL"/>
+                                                    <constraint firstAttribute="height" constant="120" id="uSC-mw-0on"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Zs-ZU-peS" userLabel="float_bg">
-                                                <rect key="frame" x="0.0" y="108" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="128" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField without formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuV-4p-e7m">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -79,7 +80,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tu-ce-tEo" userLabel="float_bg_w_formatting">
-                                                <rect key="frame" x="0.0" y="236" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="256" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField with formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -106,7 +107,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUF-wv-BcO" userLabel="otp_bg">
-                                                <rect key="frame" x="0.0" y="364" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="384" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -132,7 +133,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XK-Ga-C4T" userLabel="phone_bg">
-                                                <rect key="frame" x="0.0" y="492" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="512" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -158,7 +159,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnf-N7-K9W" userLabel="otp_dashes">
-                                                <rect key="frame" x="0.0" y="620" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="640" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField fixed dimentions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8i-YP-3kF">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
