--- a/Examples/Base.lproj/Main.storyboard
+++ b/Examples/Base.lproj/Main.storyboard
@@ -22,10 +22,40 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XYD-44-ltN">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="760"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="888"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKg-xS-JTl" userLabel="phone_fixed_width_bg">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QQG-4o-0Dp" userLabel="letters">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="120"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J9b-2i-JFx" customClass="MaskedTextField" customModule="AGInputControls">
+                                                        <rect key="frame" x="16" y="36.5" width="342" height="75.5"/>
+                                                        <color key="backgroundColor" name="BG"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FormattingField (letters)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ku-ad-zPn">
+                                                        <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" systemColor="systemGrayColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <viewLayoutGuide key="safeArea" id="5bH-sC-4Ki"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="J9b-2i-JFx" firstAttribute="top" secondItem="8ku-ad-zPn" secondAttribute="bottom" constant="8" symbolic="YES" id="9yj-tB-7w5"/>
+                                                    <constraint firstItem="8ku-ad-zPn" firstAttribute="trailing" secondItem="5bH-sC-4Ki" secondAttribute="trailing" id="CeQ-yI-hSy"/>
+                                                    <constraint firstItem="J9b-2i-JFx" firstAttribute="centerX" secondItem="QQG-4o-0Dp" secondAttribute="centerX" id="Dp8-Us-uCN"/>
+                                                    <constraint firstItem="5bH-sC-4Ki" firstAttribute="trailing" secondItem="J9b-2i-JFx" secondAttribute="trailing" constant="16" id="Jqw-FG-1yg"/>
+                                                    <constraint firstAttribute="height" constant="120" id="Ohf-Pc-WR0"/>
+                                                    <constraint firstItem="8ku-ad-zPn" firstAttribute="leading" secondItem="5bH-sC-4Ki" secondAttribute="leading" id="Wbm-6J-QKG"/>
+                                                    <constraint firstItem="8ku-ad-zPn" firstAttribute="top" secondItem="5bH-sC-4Ki" secondAttribute="top" constant="8" id="frd-wB-U4R"/>
+                                                    <constraint firstItem="5bH-sC-4Ki" firstAttribute="bottom" secondItem="J9b-2i-JFx" secondAttribute="bottom" constant="8" id="ga8-FP-Pek"/>
+                                                    <constraint firstItem="J9b-2i-JFx" firstAttribute="leading" secondItem="5bH-sC-4Ki" secondAttribute="leading" constant="16" id="uwI-C7-Q0r"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tKg-xS-JTl" userLabel="phone_fixed_width_bg">
+                                                <rect key="frame" x="0.0" y="128" width="374" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZL-W4-6fL" customClass="PhoneTextField" customModule="AGInputControls">
                                                         <rect key="frame" x="171" y="36.5" width="32" height="75.5"/>
@@ -53,7 +83,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Zs-ZU-peS" userLabel="float_bg">
-                                                <rect key="frame" x="0.0" y="128" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="256" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField without formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuV-4p-e7m">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -80,7 +110,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tu-ce-tEo" userLabel="float_bg_w_formatting">
-                                                <rect key="frame" x="0.0" y="256" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="384" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FloatingLabelTextField with formatting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UMk-pq-H9F">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -107,7 +137,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cUF-wv-BcO" userLabel="otp_bg">
-                                                <rect key="frame" x="0.0" y="384" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="512" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-ev-g31">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -133,7 +163,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XK-Ga-C4T" userLabel="phone_bg">
-                                                <rect key="frame" x="0.0" y="512" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="640" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoneTextField" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfc-WF-3FH">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -159,7 +189,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnf-N7-K9W" userLabel="otp_dashes">
-                                                <rect key="frame" x="0.0" y="640" width="374" height="120"/>
+                                                <rect key="frame" x="0.0" y="768" width="374" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTPCodeTextField fixed dimentions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y8i-YP-3kF">
                                                         <rect key="frame" x="0.0" y="8" width="374" height="20.5"/>
@@ -189,6 +219,9 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="QQG-4o-0Dp" firstAttribute="width" secondItem="XYD-44-ltN" secondAttribute="width" id="pEZ-jX-bWT"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
@@ -216,6 +249,7 @@
                         <outlet property="fixedWidthPhoneField" destination="OZL-W4-6fL" id="tjU-81-2Ex"/>
                         <outlet property="floatTextField" destination="SAD-K4-JCd" id="FZg-Bc-19M"/>
                         <outlet property="floatingFieldNoFormatting" destination="EBj-8I-nur" id="RrO-QC-9Hf"/>
+                        <outlet property="lettersField" destination="J9b-2i-JFx" id="Acx-8e-jiY"/>
                         <outlet property="phoneField" destination="R5f-hd-cj8" id="oOV-4Y-gh6"/>
                     </connections>
                 </viewController>
